--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,21 +1,24 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onAddItem(form)" #form=ngForm>
       <div class="row">
         <div class="col-xs-5" form-group>
           <label>Name</label>
-          <input tpe="text" id="name" class="form-control" #nameInput>
+          <input type="text" id="name" name="name" ngModel class="form-control" required>
+          <!-- <input tpe="text" id="name" class="form-control" #nameInput> -->
         </div>
         <div class="col-xs-2" form-group>
           <label>Amount</label>
-          <input type="text" id="amount" class="form-control" #amountInput>
+          <input type="text" id="amount" name="amount" ngModel class="form-control" required pattern="^[1-9]+[0-9]*$">
+          <!-- <input type="text" id="amount" class="form-control" #amountInput> -->
         </div>
       </div>&nbsp;
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>&nbsp;
-          <button class="btn btn-danger" type="submit">Delete</button>&nbsp;
-          <button class="btn btn-primary" type="submit">Clear</button>&nbsp;
+          <button class="btn btn-success" type="submit"
+            [disabled]="form.invalid">{{editMode ? 'Update' : 'Add' }}</button>&nbsp;
+          <button class="btn btn-danger" type="submit" *ngIf="editMode" (click)="onDelete()">Delete</button>&nbsp;
+          <button class="btn btn-primary" type="submit" (click)="onClear()">Clear</button>&nbsp;
         </div>
       </div>
     </form>
